--- a/app.json
+++ b/app.json
@@ -5,8 +5,10 @@
     "name": "studyMatch",
     "slug": "studyMatch",
     "version": "1.0.0",
-    "assetBundlePatterns": [
-      "**/*"
-    ]
+    "assetBundlePatterns": ["**/*"],
+    "android": {
+      "package": "com.mypackage.coolapp",
+      "googleServicesFile": "./google-services.json"
+    }
   }
 }
